rounded corners on images, floating to left and overflow fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,7 @@ li a:hover {
 
 article {
 	margin: 30px 0px 30px 0px;
+	overflow: auto;
 }
 
 h3 {
@@ -65,15 +66,17 @@ h3 {
 }
 
 p {
-	font-size: 16px;
+	font-size: 15px;
 	text-align: justify;
 	color: #293434;
 	font-family: 'Playfair Display', serif;
 	margin: 0px auto;
-	padding: 10px 0px 10px 0px;
+	padding: 10px 0px 5px 0px;
 }
 
 img {
-	max-width: 800px;
-	padding: 5px 0px 5px 0px;
+	max-width: 500px;
+	padding: 10px 10px 5px 0px;
+	border-radius: 30px;
+	float: left;
 }
